--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -2,7 +2,36 @@
   display: grid;
   grid-template-columns: repeat(3,1fr);
   max-width: 300px;
+  width: 300px;
 }
 .wrapper{
   padding: 30px 50px;
+  display:inline-flex;
+  gap: 50px;
+  h1{
+    text-transform: uppercase;
+    font-size: 20px;
+    margin: 0px 0px 40px 0px;
+    text-align: center;
+  }
+
+}
+.game{
+}
+.info{
+  h2{
+    text-transform: uppercase;
+    font-size: 20px;
+    margin: 0px 0px 30px 0px;
+    cursor: pointer;
+  }
+  ul{
+    padding: 0px 0px 0px 10px;
+    li{
+      &:not(:last-child){
+        margin: 0px 0px 10px 0px;
+      }
+    }
+  }
+
 }
